# verbatims-utn-vdl

./: .gitattributes  .gitignore  Dockerfile  README.md  TODO.md  gunicorn.conf.py  pyproject.toml  wsgi.py
app/: __init__.py  database.py  models.py  utils.py  views.py
app/database/: README.md
app/static/css/: styles.css
app/templates/: a_propos.html  analyse.html  analyse_message.html  base.html  comment_partial.html  confirmation_success.html  contributions.html  contributions_content.html  contributions_rows.html  discussion.html  discussion_content.html  download.html
notebooks/: Untitled.ipynb
resources/verbatims/: contributions-anonymisees.csv  contributions-anonymisees.jsonl  contributions.csv
scripts/: anonymise-contrib-json.py  deploy  deploy-on-remote-ubuntu  extract.py  install-docker-ubuntu  re_test.py  replace-db-in-production  retrieve-prod-db  scrap.py
scripts/db-backups/: README.md
scripts/scrap-data/scrap-data-250430T165525/: contrib-page-1.html  contrib-page-10.html  contrib-page-100.html  contrib-page-101.html  contrib-page-102.html  contrib-page-103.html  contrib-page-104.html  contrib-page-105.html  contrib-page-106.html  contrib-page-107.html  contrib-page-108.html  contrib-page-109.html  contrib-page-11.html  contrib-page-110.html  (+347 more)
tests/: test_database_initializer.py
tony/: __init__.py  database.py  models.py  views.py
tony/templates/: base.html  comment_partial.html  contributions.html  discussion.html  discussion_content.html  users.html
verbatims/: contributions-anonymisees.json  contributions.csv  contributions.json
(+1 files in other folders)
