[tool.poetry]
name = "verbatims-utn-vdl"
version = "0.1.0"
description = ""
authors = ["plfelter <hurdle0.foggier@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "^2.4.0"
tqdm = "^4.67.1"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
beautifulsoup4 = "^4.13.4"
pytz = "^2025.2"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.2"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
